objects/Order_Account_Role__c/Order_Account_Role__c.object-meta.xml
<CustomObject>
    <label>Order Account Role</label>
    <nameField>
        <label>Order Account Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Account Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>