objects/Order_Account_Role__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Account Roles</relationshipLabel>
    <relationshipName>Order_Account_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>