objects/Order_Account_Role__c/fields/IsBridger__c.field-meta.xml
<CustomField>
    <fullName>IsBridger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBridger</label>
    <type>Checkbox</type>
</CustomField>