objects/Order_Account_Role__c/fields/IsMedicalInsuranceBureau__c.field-meta.xml
<CustomField>
    <fullName>IsMedicalInsuranceBureau__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMedicalInsuranceBureau</label>
    <type>Checkbox</type>
</CustomField>