objects/Order_Account_Role__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Order Account Roles</relationshipLabel>
    <relationshipName>Order_Account_Roles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>