objects/Order_Account_Role__c/fields/Relationship_To_Insured__c.field-meta.xml
<CustomField>
    <fullName>Relationship_To_Insured__c</fullName>
    <label>Relationship To Insured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>