objects/Order_Account_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child Organization</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Family Member</fullName>
            </value>
            <value>
                <fullName>Group Manager</fullName>
            </value>
            <value>
                <fullName>Group Member</fullName>
            </value>
            <value>
                <fullName>Head Of Household</fullName>
            </value>
            <value>
                <fullName>Organization Owner</fullName>
            </value>
            <value>
                <fullName>Other Household Member</fullName>
            </value>
            <value>
                <fullName>Owned Organization</fullName>
            </value>
            <value>
                <fullName>Parent Organization</fullName>
            </value>
            <value>
                <fullName>Representative</fullName>
            </value>
            <value>
                <fullName>Represented Party</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>